force-app/main/default/objects/MigrationJob__c/MigrationJob__c.object-meta.xml
<CustomObject>
    <description>Top-level container for a single migration run. Owns all state for resumption, rollback, and real-time progress reporting.</description>
    <label>Migration Job</label>
    <nameField>
        <displayFormat>MIG-{YYYY}-{0000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>