force-app/main/default/objects/MigrationJob__c/fields/AllowPartialSuccess__c.field-meta.xml
<CustomField>
    <fullName>AllowPartialSuccess__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Maps to allOrNone=false in Database DML calls. When true, a failed row does not roll back the entire batch. Default true — set false only for objects requiring atomic all-or-nothing loads.</description>
    <label>Allow Partial Success</label>
    <type>Checkbox</type>
</CustomField>