force-app/main/default/objects/MigrationJob__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of records per DML batch. Hard cap at 200 to stay within Salesforce governor limits while leaving headroom for trigger-fired DML.</description>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>