force-app/main/default/objects/MigrationJob__c/fields/ConfigJSON__c.field-meta.xml
<CustomField>
    <fullName>ConfigJSON__c</fullName>
    <description>Extended job-level configuration stored as JSON. Use for source credentials hash, rate limit settings, retry policy overrides, and other properties not represented as first-class fields.</description>
    <label>Config JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>