force-app/main/default/objects/MigrationJob__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Populated when the job transitions to Failed state. Contains the resolver error or unhandled exception message.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>