force-app/main/default/objects/MigrationJob__c/fields/EstimatedCompletionAt__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletionAt__c</fullName>
    <description>Recalculated after each batch using elapsed time and percent complete. Displayed on the LWC progress dashboard as ETA.</description>
    <label>Estimated Completion</label>
    <type>DateTime</type>
</CustomField>