force-app/main/default/objects/MigrationJob__c/fields/FailedCount__c.field-meta.xml
<CustomField>
    <fullName>FailedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cumulative count of records that failed at the DML layer. Incremented per row error written with Phase=DML.</description>
    <label>Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>