force-app/main/default/objects/MigrationJob__c/fields/IsDryRun__c.field-meta.xml
<CustomField>
    <fullName>IsDryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the full validation pipeline runs and produces a complete error report with zero DML committed to the target org.</description>
    <label>Dry Run</label>
    <type>Checkbox</type>
</CustomField>