force-app/main/default/objects/MigrationJob__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <description>Human-readable label for the migration job shown in reports and the dashboard.</description>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>