force-app/main/default/objects/MigrationJob__c/fields/LastCompletedBatchSequence__c.field-meta.xml
<CustomField>
    <fullName>LastCompletedBatchSequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>GlobalBatchSequence of the last fully committed batch. Used as the resume cursor — on restart, batches with GlobalBatchSequence &lt;= this value are skipped.</description>
    <label>Last Completed Batch Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>