force-app/main/default/objects/MigrationJob__c/fields/LoadedCount__c.field-meta.xml
<CustomField>
    <fullName>LoadedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cumulative count of records successfully committed to the target org. Incremented after each batch.</description>
    <label>Loaded Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>