force-app/main/default/objects/MigrationJob__c/fields/PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>PercentComplete__c</fullName>
    <formula>IF(TotalRecords__c &gt; 0, (LoadedCount__c / TotalRecords__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>