force-app/main/default/objects/MigrationJob__c/fields/RollbackStatus__c.field-meta.xml
<CustomField>
    <fullName>RollbackStatus__c</fullName>
    <label>Rollback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotStarted</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>