force-app/main/default/objects/MigrationJob__c/fields/SkippedCount__c.field-meta.xml
<CustomField>
    <fullName>SkippedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rows intentionally excluded from DML. Examples: duplicate external IDs in insert mode, rows where the parent record was not found.</description>
    <label>Skipped Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>