force-app/main/default/objects/MigrationJob__c/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <label>Source Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
                <default>true</default>
                <label>CSV / Excel</label>
            </value>
            <value>
                <fullName>LegacyCRM</fullName>
                <label>Legacy CRM</label>
            </value>
            <value>
                <fullName>REST_API</fullName>
                <label>External REST API</label>
            </value>
            <value>
                <fullName>SalesforceOrg</fullName>
                <label>Another Salesforce Org</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>