force-app/main/default/objects/MigrationJob__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Validating</fullName>
            </value>
            <value>
                <fullName>ReadyToLoad</fullName>
                <label>Ready to Load</label>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>RolledBack</fullName>
                <label>Rolled Back</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>