force-app/main/default/objects/MigrationJob__c/fields/TotalRecords__c.field-meta.xml
<CustomField>
    <fullName>TotalRecords__c</fullName>
    <description>Sum of source record counts across all object configs. Set at job start before execution begins.</description>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>