force-app/main/default/objects/MigrationJob__c/fields/ValidationSummary__c.field-meta.xml
<CustomField>
    <fullName>ValidationSummary__c</fullName>
    <description>Human-readable summary of the pre-load validation pass. Populated by dry-run mode. Groups errors by type and object for client review.</description>
    <label>Validation Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>